--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="manifest" href="https://nhlsrtubyvggtkyrhkuu.supabase.co/storage/v1/object/public/favicon//site.webmanifest" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
   
   <!-- Course highlight styles -->
   <style>
